manifests/flux/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: broadcaster
  namespace: default
spec:
  #replicas: 3
  serviceName: broadcaster-headless
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: ghcr.io/l7mp/multicluster-broadcaster-swm-l7mp/k8s_broadcaster:0.0.2
          ports:
            - name: http
              containerPort: 4000
              protocol: TCP
