manifests/flux/base/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: dns-challange
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: broadcaster-ingress
  namespace: default
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myregion.broadcaster.stunner.cc
    secretName: broadcaster-tls
  rules:
  - host: myregion.broadcaster.stunner.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: broadcaster
            port:
              number: 4000
